--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/prop-types": "^15.7.3",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
+    "axios": "^0.19.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "chart.js": "^2.9.0",
     "chartkick": "^3.1.1",
