--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "private": true,
   "dependencies": {
     "@babel/preset-react": "^7.6.3",
+    "@ckeditor/ckeditor5-build-inline": "^16.0.0",
+    "@ckeditor/ckeditor5-react": "^2.0.0",
+    "@emotion/core": "^10.0.22",
+    "@emotion/styled": "^10.0.23",
     "@rails/actioncable": "^6.0.0-alpha",
     "@rails/actiontext": "6.0.0",
     "@rails/activestorage": "^6.0.1",
@@ -11,18 +15,26 @@
     "@types/prop-types": "^15.7.3",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
+    "@types/react-router-dom": "^5.1.3",
+    "@types/strftime": "^0.9.2",
     "axios": "^0.19.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "chart.js": "^2.9.0",
     "chartkick": "^3.1.1",
     "framer-motion": "^1.6.17",
     "jquery": "^3.4.1",
+    "moment": "^2.24.0",
     "prop-types": "^15.7.2",
+    "query-string": "^6.9.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-image-crop": "^8.4.0",
+    "react-moment": "^0.9.7",
+    "react-router-dom": "^5.1.2",
+    "react-slidedown": "^2.4.5",
     "react_ujs": "^2.6.0",
     "stimulus": "^1.1.1",
+    "strftime": "^0.10.0",
     "trix": "1.0.0",
     "ts-loader": "^6.2.1",
     "turbolinks": "^5.2.0",
